Update to dotnet 8 base images
When base images are build MS support latest stable version of Debian
at time of dotnet release, which is now bookworm

--- a/Dockerfile-dashboard
+++ b/Dockerfile-dashboard
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/sdk:6.0-bullseye-slim AS build
+FROM mcr.microsoft.com/dotnet/sdk:8.0-bookworm-slim AS build
 WORKDIR /src
 
 COPY src/Wellcome.Dds/Wellcome.Dds.Dashboard/Wellcome.Dds.Dashboard.csproj Wellcome.Dds.Dashboard/
@@ -30,7 +30,7 @@ WORKDIR "/src/Wellcome.Dds.Dashboard"
 RUN dotnet publish "Wellcome.Dds.Dashboard.csproj" -c Release -o /app/publish
 
 # Runtime image
-FROM mcr.microsoft.com/dotnet/aspnet:6.0-bullseye-slim
+FROM mcr.microsoft.com/dotnet/aspnet:8.0-bookworm-slim
 
 ENV TZ Europe/London
 ENV LANG en_GB.UTF8
