--- a/src/Wellcome.Dds/PdfThumbGenerator/PdfThumbGenerator.csproj
+++ b/src/Wellcome.Dds/PdfThumbGenerator/PdfThumbGenerator.csproj
@@ -2,8 +2,9 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
+        <LangVersion>latestmajor</LangVersion>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
