--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-Prod.json
@@ -26,7 +26,7 @@
       "born-digital-notifications-staging-prod",
       "digitised-notifications-staging-prod"
     ],
-    "WorkflowMessagePoll": true
+    "WorkflowMessagePoll": false
   },
   "Storage": {
     "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/{0}/{1}",
