--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
@@ -44,8 +44,7 @@
     "StorageApiTemplateIngest": "https://api-stage.wellcomecollection.org/storage/v1/ingests",
     "ScopeIngest": "https://api.wellcomecollection.org/storage/v1/ingests",
     "StorageMapCache": "",
-    "MemoryCacheSeconds": 3600,
-    "PreferCachedStorageMap": true,
+    "PreferCachedStorageMap": false,
     "MaxAgeStorageMap": 180
   },
   "S3CacheOptions": {
@@ -83,7 +82,7 @@
       "WriteFailThrowsException": true,
       "Container": "wellcomecollection-stage-iiif-storagemaps",
       "Prefix": "stgmap-",
-      "MemoryCacheSeconds": 3600,
+      "MemoryCacheSeconds": 180,
       "CriticalPathTimeout": 60000,
       "ThrowOnCriticalPathTimeout": true
     },
@@ -93,7 +92,7 @@
       "WriteFailThrowsException": true,
       "Container": "wellcomecollection-stage-iiif-text",
       "Prefix": "stgtext-",
-      "MemoryCacheSeconds": 3600,
+      "MemoryCacheSeconds": 180,
       "CriticalPathTimeout": 60000,
       "ThrowOnCriticalPathTimeout": true
     },
@@ -103,7 +102,7 @@
       "WriteFailThrowsException": true,
       "Container": "wellcomecollection-stage-iiif-annotations",
       "Prefix": "stgannos-",
-      "MemoryCacheSeconds": 3600,
+      "MemoryCacheSeconds": 180,
       "CriticalPathTimeout": 60000,
       "ThrowOnCriticalPathTimeout": true
     }
