--- a/src/Wellcome.Dds/PdfThumbGenerator/PdfThumbGenerator.csproj
+++ b/src/Wellcome.Dds/PdfThumbGenerator/PdfThumbGenerator.csproj
@@ -17,6 +17,8 @@
 
      <ItemGroup>
       <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.1.167" />
+      <PackageReference Include="AWSSDK.SSO" Version="3.7.400.96" />
+      <PackageReference Include="AWSSDK.SSOOIDC" Version="3.7.400.97" />
       <PackageReference Include="CsvHelper" Version="27.2.1" />
       <PackageReference Include="GhostScript.NetCore" Version="1.0.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
