--- a/src/Wellcome.Dds/WorkflowProcessor/WorkflowProcessor.csproj
+++ b/src/Wellcome.Dds/WorkflowProcessor/WorkflowProcessor.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.1.167" />
     <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.101.14" />
     <PackageReference Include="AWSSDK.SQS" Version="3.7.100.81" />
+    <PackageReference Include="AWSSDK.SSO" Version="3.7.400.96" />
+    <PackageReference Include="AWSSDK.SSOOIDC" Version="3.7.400.97" />
     <PackageReference Include="CsvHelper" Version="27.2.1" />
     <PackageReference Include="EFCore.NamingConventions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="6.0.6" />
